--- a/MyCalendarDemo/bin/AndroidManifest.xml
+++ b/MyCalendarDemo/bin/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:name="APP"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustResize"
@@ -24,7 +25,9 @@
             android:name=".DateActivity">
             
         </activity>
-        
+        <activity
+            android:name=".SetActivity">
+        </activity>
         <receiver android:name=".AlarmReceiver">
              <intent-filter>
                 <action android:name="com.calendar.demo.alarm" />
