闹铃完成，如何只调查闹铃，不出现背景界面

--- a/MyCalendarDemo/AndroidManifest.xml
+++ b/MyCalendarDemo/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity
             android:name=".SetActivity">
         </activity>
+        <activity 
+            android:name=".DilogActivity">
+            
+        </activity>
         <receiver android:name=".AlarmReceiver">
              <intent-filter>
                 <action android:name="com.calendar.demo.alarm" />
