--- a/MyCalendarDemo/bin/AndroidManifest.xml
+++ b/MyCalendarDemo/bin/AndroidManifest.xml
@@ -10,12 +10,13 @@
     <application
         android:name="APP"
         android:icon="@drawable/ic_launcher"
+        android:theme="@android:style/Theme.NoTitleBar"
         android:label="@string/app_name" >
         
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@android:style/Theme.NoTitleBar"
+            
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +32,8 @@
             android:name=".SetActivity">
         </activity>
         <activity 
-            android:name=".DilogActivity">
+            android:name=".DilogActivity"
+            android:theme="@android:style/Theme.Translucent">
             
         </activity>
         <receiver android:name=".AlarmReceiver">
