--- a/MyCalendarDemo/AndroidManifest.xml
+++ b/MyCalendarDemo/AndroidManifest.xml
@@ -34,7 +34,7 @@
             
         </activity>
         <activity
-            android:name=".SetActivity">
+            android:name=".SettingActivity">
         </activity>
         <activity 
             android:name=".DilogActivity"
