--- a/MyCalendarDemo/AndroidManifest.xml
+++ b/MyCalendarDemo/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity
             android:name=".SetActivity">
         </activity>
+        <activity
+            android:name=".AddActivity">
+        </activity>
         <activity 
             android:name=".DilogActivity"
             android:launchMode="singleInstance"
